<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_popup"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="60dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- TextView in the center -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteDoubleCheck"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/buttonsGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Group for buttons -->
            <androidx.constraintlayout.widget.Group
                android:id="@+id/buttonsGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="deleteButton,cancelButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Cancel Button -->
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@drawable/blue_cancel_button_background"
                android:textColor="@color/medium_blue"
                app:layout_constraintTop_toBottomOf="@id/textView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp" />

            <!-- Delete Button -->
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/delete_button_background"
                android:text="@string/delete"
                android:textColor="@color/red"
                app:layout_constraintTop_toBottomOf="@id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>